# seraproject

./: LICENSE  README.md  RFI_extra.py  RFI_support.py  SK_in_Python.py~  mitigateRFI_dev_trueMS.py  mitigateRFI_gdigs.py  mitigateRFI_main.py  mitigateRFI_main_dev.py  mitigateRFI_main_no_union.py
OfflineRFI/: RFI_detection.py  RFI_support.py  RegenerateSpect.py  SK_in_Python.py  detectRFI_VPM.py  detectRFI_VPM_MSSK.py  detectRFI_VPM_MSSK_copy.py  detectRFI_VPM_framework.py  detectRFI_fb.py  mitigateRFI_main.py
OfflineRFI/Abell370/: Abell370_SK_part1.py  VEGAS_to_npy.py~  blraw.txt
OfflineRFI/AnalyzeData/: Abell370_SK_part1.py  Abell370_SK_part1.py~  J1713+0747.py  README  SK_guppi_py2.py  SK_guppi_py3.py  SK_in_Python.py  SK_stats.py  SK_stats_overtime.py  SK_stats_time.py  btlraw_SK.py  btlraw_SK.py~  btlraw_SK_overtime.py  btlraw_SK_overtime.py~  flags_J1713+0747.py  flags_tot_stats.npy  guppi.py  guppi_SK.py  guppi_SK_fromraw.py  guppi_SK_overtime.py  guppi_SK_singleblock.py  guppi_SK_singlechan.py  guppi_SK_time.py  (+8 more)
RealTimeRFI/HTGS-Mitigation/: CMakeLists.txt  README  main.cpp
RealTimeRFI/HTGS-Mitigation/data/: SpectrumData.h  StreamData.h
RealTimeRFI/HTGS-Mitigation/memory/: DataBlockAllocator.h  SimpleReleaseRule.h
RealTimeRFI/HTGS-Mitigation/rules/: GatherRule.cpp  GatherRule.h
RealTimeRFI/HTGS-Mitigation/tasks/: FFTTask.cpp  FFTTask.h  IFFTTask.cpp  IFFTTask.h  MitigateTask.cpp  MitigateTask.h  ReadStreamTask.cpp  ReadStreamTask.h  WriteResultTask.cpp  WriteResultTask.h
old/: framework_mitigateRFI_main.py  lr.npy  mitigateRFI_main_N.py
(+57 files in other folders)
